--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -1,6 +1,9 @@
 name: Verify available python versions
 
-on: [push, pull_request]
+on:
+ push:
+   branches: [main]
+ pull_request:
 
 jobs:
   test:
