--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          python-version: ['2.7', '3.5', '3.6', '3.7', '3.8']
+          python-version: ['2.7', '3.5', '3.6', '3.7', '3.8', 'pypy', 'pypy3', 'pypy2.7', 'pypy3.5', 'pypy3.6', 'pypy3.7', 'pypy3.8']
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
